--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
+buildscript {
+	dependencies {
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.3.3.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 }
+
+ext['hibernate.version'] = '5.2.11.Final'
 
 group = 'com.gounchoi'
 version = '0.0.1-SNAPSHOT'
