--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.2'
 	implementation 'junit:junit:4.12'
 	implementation 'junit:junit:4.12'
 	compileOnly 'org.projectlombok:lombok'
